--- a/public/admin.html
+++ b/public/admin.html
@@ -3,13 +3,45 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-  <title>管理者パネル - Vulnerable Shop</title>
+  <title>管理者パネル</title>
   <link rel="stylesheet" href="./styles.css"/>
+
+  <!-- 見た目微調整（このページ専用の軽量CSS） -->
   <style>
-    .guard {max-width:960px;margin:24px auto;padding:16px;border:1px solid #27334d;border-radius:12px;background:#0f162b;color:#e9edf6}
-    .table {width:100%;border-collapse:collapse;margin-top:12px}
-    .table th,.table td{border-bottom:1px solid rgba(255,255,255,.1);padding:10px;text-align:left}
-    .table th{opacity:.8}
+    /* テーブル */
+    .adm-table{width:100%;border-collapse:separate;border-spacing:0 10px}
+    .adm-table th,.adm-table td{padding:10px 12px;border-bottom:1px solid rgba(255,255,255,.06)}
+    .adm-table thead th{border-bottom:1px solid rgba(255,255,255,.14);color:#cdd7ea;font-weight:700}
+    .adm-row{background:rgba(255,255,255,.04);border:1px solid rgba(255,255,255,.08);border-radius:12px}
+    .adm-row td:first-child,.adm-row th:first-child{border-top-left-radius:12px;border-bottom-left-radius:12px}
+    .adm-row td:last-child,.adm-row th:last-child{border-top-right-radius:12px;border-bottom-right-radius:12px}
+
+    /* 入力 */
+    .adm-inp{
+      height:34px;padding:6px 10px;border-radius:8px;border:1px solid #2c3a59;
+      background:#101829;color:#e9edf6;outline:none;min-width:140px
+    }
+    .adm-inp:focus{border-color:#2d7ef7;box-shadow:0 0 0 3px rgba(45,126,247,.18)}
+
+    /* ボタン（小さめ・詰め配置） */
+    .btn-xs{height:30px;padding:0 10px;font-size:.9rem;border-radius:8px}
+    .btn-ghost{background:#14203a;border:1px solid #2b3a5a;color:#e9edf6}
+    .btn-ghost:hover{filter:brightness(1.08)}
+    .btn-danger.btn-xs{background:#d05860}
+    .btn-warning.btn-xs{background:#d6a33b}
+    .btn-group{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
+
+    /* セクション余白 */
+    .admin-wrap{max-width:1100px;margin:24px auto}
+    .admin-section{margin:18px 0}
+    .admin-section h2{margin:0 0 10px 2px}
+    .admin-content{padding:16px;border-radius:16px;border:1px solid rgba(255,255,255,.08);
+      background:linear-gradient(180deg,rgba(29,37,61,.6),rgba(18,24,42,.6))
+    }
+
+    /* バックアップテーブル */
+    .bk-name{font-family:ui-monospace,SFMono-Regular,Menlo,Consolas,monospace}
+    .bk-ops .btn{min-width:74px}
   </style>
 </head>
 <body>
@@ -20,105 +52,71 @@
       <a href="./index.html">ホーム</a>
       <a href="./products.html">商品</a>
       <a href="./cart.html">カート</a>
-      <div class="auth-buttons">
-        <button id="logoutBtn" class="btn btn-danger">ログアウト</button>
-      </div>
+      <button id="logoutBtn" class="btn btn-danger btn-xs">ログアウト</button>
     </div>
   </nav>
 </header>
 
-<main>
-  <section class="admin-section" style="margin-top:16px">
+<main class="admin-wrap">
+  <div style="margin:8px 0;">
+    <span id="adminHello" class="user-pill" style="display:inline-block">管理者でログイン中: root</span>
+  </div>
+
+  <!-- Users -->
+  <section class="admin-section">
     <h2>ユーザー一覧</h2>
-    <div id="adminInfo" class="guard">読み込み中...</div>
-    <div id="adminContent" class="admin-content" style="margin-top:16px">
-      <table class="table" id="usersTable">
-        <thead><tr><th>ID</th><th>ユーザー名</th><th>メール</th><th>権限</th><th>作成日時</th></tr></thead>
-        <tbody id="usersBody"></tbody>
+    <div class="admin-content">
+      <table class="adm-table">
+        <thead>
+          <tr>
+            <th style="width:64px">ID</th>
+            <th style="width:140px">ユーザー名</th>
+            <th style="min-width:240px">メール</th>
+            <th style="min-width:170px">パスワード</th>
+            <th style="width:90px">権限</th>
+            <th style="width:180px">作成日時</th>
+            <th style="width:170px">操作</th>
+          </tr>
+        </thead>
+        <tbody id="userTbody"></tbody>
       </table>
+      <div style="margin-top:10px;color:#9fb3ff;font-size:12px">※ root は削除・パスワード変更不可</div>
     </div>
+  </section>
 
-    <div class="admin-controls">
-      <button id="backupBtn" class="btn btn-info">DBバックアップ作成</button>
-      <button id="debugBtn" class="btn btn-warning">デバッグ情報</button>
+  <!-- Backups -->
+  <section class="admin-section">
+    <h2>DB バックアップ</h2>
+    <div class="admin-content">
+      <div style="display:flex;gap:10px;align-items:center;margin-bottom:12px;flex-wrap:wrap">
+        <input id="backupName" class="adm-inp" type="text" placeholder="任意の名前 (英数/.-_)">
+        <button id="backupMake" class="btn btn-info btn-xs">DBバックアップ作成</button>
+      </div>
+
+      <table class="adm-table">
+        <thead>
+          <tr>
+            <th>ファイル名</th>
+            <th style="text-align:right;width:120px">サイズ</th>
+            <th style="width:220px">作成日時</th>
+            <th style="width:190px">操作</th>
+          </tr>
+        </thead>
+        <tbody id="backupTbody"></tbody>
+      </table>
+      <div id="backupEmpty" style="margin-top:6px;display:none;color:#9fb3ff">バックアップはまだありません。</div>
     </div>
-
-    <pre id="debugOut" class="guard" style="display:none;"></pre>
   </section>
 </main>
 
-<script>
-  // 軽いユーティリティ
-  const jget=(k,f=null)=>{try{return JSON.parse(localStorage.getItem(k)||'null')??f;}catch{return f;}};
-  const token=localStorage.getItem('token');
-  const user =jget('user',null);
+<footer>
+  <p>&copy; Vulnerable Shop (教育目的)</p>
+</footer>
 
-  // 1) ガード：トークン無し/管理者でなければホームへ
-  async function guard(){
-    const info = document.getElementById('adminInfo');
-    if(!token || !user){ info.textContent='未ログインのためアクセスできません。'; setTimeout(()=>location.href='./index.html',900); return false; }
-
-    // サーバ側判定に任せるが、早期フィードバックとしてロールも見ておく
-    if((user.role||'')!=='admin'){ info.textContent='管理者権限が必要です。'; setTimeout(()=>location.href='./index.html',900); return false; }
-
-    info.textContent='管理者でログイン中: ' + (user.username||'');
-    return true;
-  }
-
-  // 2) ユーザー一覧の取得
-  async function loadUsers(){
-    const body = document.getElementById('usersBody');
-    body.innerHTML = '<tr><td colspan="5">読み込み中...</td></tr>';
-    try{
-      const r = await fetch('/api/admin/users', { headers:{Authorization:'Bearer '+token}});
-      const data = await r.json();
-      if(!r.ok) throw new Error(data.error||r.status);
-      body.innerHTML = (data||[]).map(u=>`
-        <tr>
-          <td>${u.id}</td>
-          <td>${u.username}</td>
-          <td>${u.email||''}</td>
-          <td>${u.role||''}</td>
-          <td>${u.created_at||''}</td>
-        </tr>
-      `).join('');
-    }catch(e){
-      body.innerHTML = `<tr><td colspan="5" style="color:#ff9999">取得失敗: ${String(e)}</td></tr>`;
-    }
-  }
-
-  // 3) バックアップ/デバッグ
-  document.getElementById('backupBtn')?.addEventListener('click', async ()=>{
-    const name = 'backup_'+Date.now();
-    try{
-      const r = await fetch('/api/backup', {method:'POST', headers:{'Content-Type':'application/json'}, body:JSON.stringify({backupName:name})});
-      const d = await r.json();
-      alert(r.ok ? `バックアップ作成: ${name}.db` : `失敗: ${d.error||r.status}`);
-    }catch(e){ alert('エラー: '+e.message); }
-  });
-
-  document.getElementById('debugBtn')?.addEventListener('click', async ()=>{
-    const out = document.getElementById('debugOut');
-    try{
-      const r = await fetch('/api/debug');
-      const d = await r.json();
-      out.style.display='block';
-      out.textContent = JSON.stringify(d, null, 2);
-    }catch(e){
-      out.style.display='block';
-      out.textContent = '取得失敗: '+e.message;
-    }
-  });
-
-  // 4) ログアウト
-  document.getElementById('logoutBtn')?.addEventListener('click', ()=>{
-    localStorage.removeItem('token'); localStorage.removeItem('user');
-    location.href='./index.html';
-  });
-
-  (async ()=>{
-    if(await guard()) await loadUsers();
-  })();
-</script>
+<!-- 共通 -->
+<script src="./script.js"></script>
+<script src="./js/auth.js" defer></script>
+<!-- admin 専用 -->
+<script src="./js/admin.js" defer></script>
 </body>
 </html>
